[gd_scene load_steps=26 format=3 uid="uid://dbmfpfkucerfk"]

[ext_resource type="Script" path="res://scenes/player_character.gd" id="1_0338i"]
[ext_resource type="Texture2D" uid="uid://dgdrhtk8ftcyd" path="res://assets/Character/TigerHacks 2024 spritesheet_20241103032632.png" id="2_u4d0a"]
[ext_resource type="Script" path="res://scenes/interacter.gd" id="3_h7x5s"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8vi4t"]
size = Vector2(29.5293, 26.5)

[sub_resource type="GDScript" id="GDScript_1j0j0"]
script/source = "extends Camera2D


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass



# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	pass
"

[sub_resource type="Animation" id="Animation_vxyxy"]
length = 0.001

[sub_resource type="Animation" id="Animation_onqqu"]
resource_name = "walk-back"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [12, 13, 14, 15]
}

[sub_resource type="Animation" id="Animation_dp64f"]
resource_name = "walk-forward"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_pxj08"]
resource_name = "walk-left"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [4, 5, 6, 7]
}

[sub_resource type="Animation" id="Animation_0xmd1"]
resource_name = "walk-right"
length = 2.0
loop_mode = 1
step = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1, 1.5),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_4ubjx"]
_data = {
"RESET": SubResource("Animation_vxyxy"),
"walk-back": SubResource("Animation_onqqu"),
"walk-forward": SubResource("Animation_dp64f"),
"walk-left": SubResource("Animation_pxj08"),
"walk-right": SubResource("Animation_0xmd1")
}

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_buvxg"]

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_41hvw"]
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_buvxg")
nodes/BlendSpace2D/position = Vector2(329.767, 75.0504)

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_ey11m"]
animation = &"walk-left"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_nubgy"]
animation = &"walk-right"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_tnp0r"]
animation = &"walk-forward"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_jnjqw"]
animation = &"walk-back"

[sub_resource type="AnimationNodeBlendSpace2D" id="AnimationNodeBlendSpace2D_i0mwb"]
blend_point_0/node = SubResource("AnimationNodeAnimation_ey11m")
blend_point_0/pos = Vector2(-1, 0)
blend_point_1/node = SubResource("AnimationNodeAnimation_nubgy")
blend_point_1/pos = Vector2(1, 0)
blend_point_2/node = SubResource("AnimationNodeAnimation_tnp0r")
blend_point_2/pos = Vector2(0, 1)
blend_point_3/node = SubResource("AnimationNodeAnimation_jnjqw")
blend_point_3/pos = Vector2(0, -1)

[sub_resource type="AnimationNodeBlendTree" id="AnimationNodeBlendTree_2sy8y"]
graph_offset = Vector2(-12.6364, -9.63634)
nodes/BlendSpace2D/node = SubResource("AnimationNodeBlendSpace2D_i0mwb")
nodes/BlendSpace2D/position = Vector2(139, 106)
nodes/output/position = Vector2(370, 110)

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_cb2ds"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_j2auf"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_p4i21"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_cqjl6"]
states/idle/node = SubResource("AnimationNodeBlendTree_41hvw")
states/idle/position = Vector2(350, 171)
states/move/node = SubResource("AnimationNodeBlendTree_2sy8y")
states/move/position = Vector2(325, 55.5)
transitions = ["Start", "idle", SubResource("AnimationNodeStateMachineTransition_cb2ds"), "idle", "move", SubResource("AnimationNodeStateMachineTransition_j2auf"), "move", "idle", SubResource("AnimationNodeStateMachineTransition_p4i21")]

[sub_resource type="CircleShape2D" id="CircleShape2D_37cqf"]

[sub_resource type="CircleShape2D" id="CircleShape2D_f7onv"]
radius = 14.2778

[node name="Player_Character" type="CharacterBody2D"]
position = Vector2(-368, -250)
script = ExtResource("1_0338i")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(0, -58)
scale = Vector2(1.64804, 1.50473)
texture = ExtResource("2_u4d0a")
hframes = 5
vframes = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-1, -23)
scale = Vector2(1.53632, 1.58301)
shape = SubResource("RectangleShape2D_8vi4t")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(-0.999969, -65)
scale = Vector2(1.465, 1.465)
position_smoothing_enabled = true
script = SubResource("GDScript_1j0j0")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_4ubjx")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_cqjl6")
anim_player = NodePath("../AnimationPlayer")
parameters/idle/BlendSpace2D/blend_position = Vector2(0, 0)
parameters/move/BlendSpace2D/blend_position = Vector2(0, 0)

[node name="InteractionComponents" type="Node2D" parent="."]
z_index = 1

[node name="interaction area" type="Area2D" parent="InteractionComponents"]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="Interaction shape" type="CollisionShape2D" parent="InteractionComponents/interaction area"]
position = Vector2(-1, -65)
scale = Vector2(6.92798, -8.84068)
shape = SubResource("CircleShape2D_37cqf")

[node name="Interact Label" type="Label" parent="InteractionComponents"]
offset_left = -36.0
offset_top = -188.0
offset_right = -6.0
offset_bottom = -165.0
scale = Vector2(2.45926, 2.11911)
text = "test"
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="interacter" type="Area2D" parent="."]
script = ExtResource("3_h7x5s")

[node name="CollisionShape2D" type="CollisionShape2D" parent="interacter"]
position = Vector2(-1, -71)
scale = Vector2(5.0029, -5.89777)
shape = SubResource("CircleShape2D_f7onv")

[connection signal="area_entered" from="InteractionComponents/interaction area" to="." method="_on_interaction_area_area_entered"]
[connection signal="area_exited" from="InteractionComponents/interaction area" to="." method="_on_interaction_area_area_exited"]
